# yahtzee-cpp

./: .gitmodules  CMakeLists.txt  Main.cpp  README.md  _build.sh
.github/workflows/: cmake-single-platform.yml
src/: CMakeLists.txt  Category.cpp  Category.h  Dice.cpp  Dice.h  Game.cpp  Game.h  Main.cpp
test/: CMakeLists.txt
test/unittest/: CMakeLists.txt  TestDice.cpp
